--- a/src/main/webapp/web.xml
+++ b/src/main/webapp/web.xml
@@ -3,6 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+
     <servlet>
         <servlet-name>main</servlet-name>
         <servlet-class>com.internet.shop.controllers.MainPageController</servlet-class>
@@ -30,7 +31,7 @@
 
     <servlet-mapping>
         <servlet-name>registration</servlet-name>
-        <url-pattern>/user/registration</url-pattern>
+        <url-pattern>/registration</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -88,7 +89,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>getAllOrders</servlet-name>
-        <url-pattern>/orders/all</url-pattern>
+        <url-pattern>/orders</url-pattern>
     </servlet-mapping>
 
     <servlet>
