--- a/src/main/webapp/web.xml
+++ b/src/main/webapp/web.xml
@@ -40,7 +40,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>deleteUser</servlet-name>
-        <url-pattern>/user/delete</url-pattern>
+        <url-pattern>/users/delete</url-pattern>
     </servlet-mapping>
     <servlet>
         <servlet-name>allProducts</servlet-name>
@@ -48,7 +48,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>allProducts</servlet-name>
-        <url-pattern>/product/all</url-pattern>
+        <url-pattern>/products/all</url-pattern>
     </servlet-mapping>
     <servlet>
         <servlet-name>buyProduct</servlet-name>
@@ -58,6 +58,17 @@
         <servlet-name>buyProduct</servlet-name>
         <url-pattern>/shopping-cart/products/add</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>deleteProduct</servlet-name>
+        <servlet-class>com.internet.shop.controllers.cart.DeleteProductFromCartController</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>deleteProduct</servlet-name>
+        <url-pattern>/products/delete</url-pattern>
+    </servlet-mapping>
+
     <servlet>
         <servlet-name>currentShoppingCart</servlet-name>
         <servlet-class>com.internet.shop.controllers.cart.GetAllProductsFromCartController</servlet-class>
@@ -72,7 +83,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>addProduct</servlet-name>
-        <url-pattern>/product/add</url-pattern>
+        <url-pattern>/products/add</url-pattern>
     </servlet-mapping>
     <servlet>
         <servlet-name>getUserOrders</servlet-name>
@@ -90,6 +101,16 @@
     <servlet-mapping>
         <servlet-name>getAllOrders</servlet-name>
         <url-pattern>/orders</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>orderDetails</servlet-name>
+        <servlet-class>com.internet.shop.controllers.order.GetOrderDetailsController</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>orderDetails</servlet-name>
+        <url-pattern>/order/details</url-pattern>
     </servlet-mapping>
 
     <servlet>
