injector interactions added

--- a/src/main/webapp/web.xml
+++ b/src/main/webapp/web.xml
@@ -15,6 +15,15 @@
     </servlet-mapping>
 
     <servlet>
+        <servlet-name>injectData</servlet-name>
+        <servlet-class>com.internet.shop.controllers.InjectDataController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>injectData</servlet-name>
+        <url-pattern>/inject</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <servlet-name>allUsers</servlet-name>
         <servlet-class>com.internet.shop.controllers.user.GetAllUsersController</servlet-class>
     </servlet>
@@ -158,6 +167,15 @@
     </filter>
     <filter-mapping>
         <filter-name>authenticationFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>authorisationFilter</filter-name>
+        <filter-class>com.internet.shop.web.filters.AuthorisationFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>authorisationFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
